# omni-bot

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
docs/: TODO.md  project_brief.md
src/agents/: __init__.py
src/app/: config.py  exceptions.py  logging_config.py  main.py  models.py
src/data/: __init__.py
src/llm/: __init__.py
tests/: conftest.py  test_api.py
